fix descenders of letters being cut off

--- a/blocks/card.css
+++ b/blocks/card.css
@@ -12,15 +12,14 @@
 
 .card__content {
   display: flex;
-  align-items: flex-end;
+  align-items: baseline;
   justify-content: space-between;
 }
 
 .card__title {
   font-size: 20px;
   margin: 0;
-  padding: 12px 0 0;
-  line-height: 1;
+  padding: 12px 0 2px;
   text-overflow: ellipsis;
   white-space: nowrap;
   overflow: hidden;
