--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -23,7 +23,7 @@
   margin: 0 0 12px;
   font-size: 32px;
   font-weight: 500;
-  line-height: 100%;
+  line-height: 1;
   display: -webkit-box;
   overflow: hidden;
   text-overflow: ellipsis;
@@ -74,7 +74,8 @@
 .profile__add-btn {
   margin-left: auto;
   padding: 18px 24px;
-  width: 149px;
+  max-width: 149px;
+  width: 100%;
   height: 52px;
   font-size: 16px;
   line-height: 1;
@@ -139,5 +140,6 @@
 
   .profile__add-btn {
     width: 100%;
+    max-width: 288px;
   }
 }
